ts-19: fix layout overflow styles

--- a/src/components/navigation/styles.scss
+++ b/src/components/navigation/styles.scss
@@ -21,7 +21,7 @@
 
   &__list {
     list-style: none;
-    padding: 0 $default-padding;
+    padding: 0;
     text-align: center;
 
     li {
